--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Dominhtung</title>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-250077556-3"></script>
 <script>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h3>index 2222</h3>
+    <h3>index home pro</h3>
 </body>
 
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-2E1C9640R5"></script>
