--- a/test.html
+++ b/test.html
@@ -1,8 +1,1 @@
-<!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-2E1C9640R5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-2E1C9640R5');
-</script> -->
+oke
