--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body>
     <h3>index home pro</h3>
     <p><img src="http://media.nhatnamyvien.com/media/images/full/stag/slider-trang-chu/slider-weup.png"></p>
+        <p><img src="https://media.nhatnamyvien.com/media/images/full/stag/slider-trang-chu/slider-weup.png"></p>
+
 </body>
 
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-2E1C9640R5"></script>
