--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 </head>
 
 <body>
-    <h3>index home pro</h3>
+    <div class="oke" style="margin: 0 auto; width: 500px; height: 100vh">
+         <h3>index home pro</h3>
     <p><img src="http://media.nhatnamyvien.com/media/images/full/stag/slider-trang-chu/slider-weup.png"></p>
+    
+    <h3>okeeeeeeeeee</h3>
+    
         <p><img src="https://media.nhatnamyvien.com/media/images/full/stag/slider-trang-chu/slider-weup.png"></p>
-
+    </div>
 </body>
 
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-2E1C9640R5"></script>
